crates/keron-lang/tests/corpus/errors/parse/val_named_reconcile.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `reconcile` is a reserved keyword
  --> 1:5
  |
1 | val reconcile = 1
  |     ^
